a very poor pattrn party done, will start on next one now

--- a/index.html
+++ b/index.html
@@ -105,8 +105,32 @@
         <div  id="flex-7" class="flex-item">
          <h3>Lorem ipsum dolor sit amet</h3>
         </div>
-
       </div>
+    </section>
+    <section class="example-container .header-container">
+      <nav>
+          <div class="header-bar">
+          <div class="full-nav-bar">
+            <a>Navigation Link 1</a>
+            <a>Navigation Link 2</a>
+            <a>Navigation Link 3</a>
+            <input type="text" value="password"/>
+         </div>
+         <div class="drop-dn-btn">
+         </div>
+         <div class=" menu">
+           menu
+         </div>
+         </div>
+        </div>
+      </nav>
+      <div class="drop-dn-menu " style="display:none;">
+        <a>Navigation Link 1</a>
+        <a>Navigation Link 2</a>
+        <a>Navigation Link 3</a>
+        <input type="text" />
+      </div>
+
     </section>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
